did some stuff with functionality

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     </header>
 
     <main>
-        <div id="prompt-div">
+        <!-- <div id="prompt-div">
             <p>...or scroll down for more options.</p>
             <i id="prompt-arrow" class="material-icons">keyboard_arrow_down</i>
-        </div>
+        </div> -->
 
-        <div id="options-div">
+        <!-- <div id="options-div">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum labore temporibus itaque odit similique
                 suscipit iusto, beatae veritatis quis. Ea repellat magni dolor saepe. Dolore quas earum deleniti quis
@@ -55,10 +55,10 @@
                 modi vero, asperiores assumenda repellendus eius molestias delectus ad enim! Quam alias odit et magnam
                 vel reiciendis!
             </p>
-        </div>
+        </div> -->
 
         <div id="results-div">
-            <div class="result">
+            <!-- <div class="result">
                 <img class="result-img">
                 <div class="result-preview">
                     <div class="result-title">
@@ -85,7 +85,7 @@
                             non cum ratione ea sunt ducimus!</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </main>
 
@@ -93,11 +93,15 @@
 
     </footer>
 
-    <!-- firebase -->
-    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
+    <!-- firebase database -->
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-database.js"></script>
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+   
+
+    <!-- firebase authentication -->
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
 
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
